@@ -1727,6 +1727,12 @@ void HTMLInputElementImpl::attach()
 #endif
 }
 
+void HTMLInputElementImpl::detach()
+{
+    HTMLGenericFormElementImpl::detach();
+    m_valueMatchesRenderer = false;
+}
+
 DOMString HTMLInputElementImpl::altText() const
 {
     // http://www.w3.org/TR/1998/REC-html40-19980424/appendix/notes.html#altgen
@@ -3149,6 +3155,12 @@ bool HTMLTextAreaElementImpl::isEditable()
 void HTMLTextAreaElementImpl::accessKeyAction()
 {
     focus();
+}
+
+void HTMLTextAreaElementImpl::detach()
+{
+    HTMLGenericFormElementImpl::detach();
+    m_valueMatchesRenderer = false;
 }
 
 // -------------------------------------------------------------------------
